--- a/package.json
+++ b/package.json
@@ -35,5 +35,7 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "https://backend-zendesk-git-main-ti-agrobills-projects.vercel.app"
+
 }
